Updated the images carousel order in index.html

--- a/index.html
+++ b/index.html
@@ -3,63 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Day Special</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" defer></script>
+    <title>Valentine Carousel</title>
 </head>
 <body>
-    <header>
-        <h1>Happy Valentine's Day!</h1>
-    </header>
-
-    <section id="proposal-animation">
-        <h2>Proposal Animation</h2>
-        <div class="animation-container"> <!-- Animation Code Here --> </div>
-    </section>
-
-    <section id="video-call-animation">
-        <h2>Wedding Video Call</h2>
-        <div class="animation-container"> <!-- Animation Code Here --> </div>
-    </section>
-
-    <section id="photo-carousel">
-        <h2>Our Memories</h2>
-        <div class="carousel"> <!-- Image Carousel HTML Here --> </div>
-    </section>
-
-    <section id="quiz">
-        <h2>Valentine's Quiz</h2>
-        <form id="quiz-form">
-            <label>1. Dream Place:
-                <input type="text" name="dreamPlace" value="Taj Mahal" readonly>
-            </label>
-            <label>2. Kids Number:
-                <input type="text" name="kidsNumberless" value="Numberless" readonly>
-            </label>
-            <label>3. Propose Date:
-                <input type="text" name="proposalDate" value="27/09/2025" readonly>
-            </label>
-            <label>4. Best Friend:
-                <input type="text" name="bestFriend" value="Jibichan" readonly>
-            </label>
-            <label>5. Favorite Chocolate:
-                <input type="text" name="favoriteChocolate" value="All" readonly>
-            </label>
-            <button type="button">Submit</button>
-        </form>
-    </section>
-
-    <section id="playlist">
-        <h2>Playlist</h2>
-        <ul>
-            <li>Kannukkulla (Tamil movie)</li>
-            <li>Munbe Vaa</li>
-            <li>Him &amp; I</li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>Thank you for visiting our Valentine's Day special page!</p>
-    </footer>
+    <div class="carousel">
+        <img src="image2.jpg" alt="Proposal">
+        <img src="image3.jpg" alt="Video call">
+        <img src="image4.jpg" alt="Animation">
+        <img src="image1.jpg" alt="Couple">
+    </div>
 </body>
 </html>
