--- a/index.html
+++ b/index.html
@@ -3,14 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine Carousel</title>
+    <title>Valentine's Day for Ponnuh and Jibichaa</title>
+    <link href="https://fonts.googleapis.com/css2?family=YourCustomFont:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'YourCustomFont', sans-serif;
+            background-color: #f8f0f8;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+        h1 {
+            color: #ff3366;
+            text-shadow: 2px 2px #ff66a3;
+            animation: glow 1.5s infinite alternate;
+        }
+        @keyframes glow {
+            0% { text-shadow: 0 0 5px #ff3366, 0 0 10px #ff3366; }
+            100% { text-shadow: 0 0 20px #ff3366, 0 0 30px #ff3366; }
+        }
+        .img-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin: 20px;
+        }
+        .img-container img {
+            width: 200px;
+            height: auto;
+            margin: 10px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            animation: float 3s ease-in-out infinite;
+        }
+        @keyframes float {
+            0% { transform: translatey(0); }
+            50% { transform: translatey(-10px); }
+            100% { transform: translatey(0); }
+        }
+        .quiz {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 15px;
+            margin: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+        .heart {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background-color: #ff3366;
+            clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+            animation: animateHeart 2s ease-in forwards;
+        }
+        @keyframes animateHeart {
+            0% { transform: translateY(100vh); opacity: 1; }
+            100% { transform: translateY(0); opacity: 0; }
+        }
+    </style>
 </head>
 <body>
-    <div class="carousel">
-        <img src="image2.jpg" alt="Proposal">
-        <img src="image3.jpg" alt="Video call">
-        <img src="image4.jpg" alt="Animation">
-        <img src="image1.jpg" alt="Couple">
+    <h1>Happy Valentine's Day Ponnuh & Jibichaa!</h1>
+
+    <div class="img-container">
+        <img src="image1.jpg" alt="" />
+        <img src="image2.jpg" alt="" />
+        <img src="image3.jpg" alt="" />
+        <img src="image4.jpg" alt="" />
     </div>
+
+    <div class="quiz">
+        <h2>Quiz Questions</h2>
+        <ol>
+            <li>Question 1</li>
+            <li>Question 2</li>
+            <li>Question 3</li>
+        </ol>
+    </div>
+
+    <h2>Songs Playlist</h2>
+    <ul>
+        <li><audio controls><source src="Kannukkulla.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio></li>
+        <li><audio controls><source src="MunbeVaa.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio></li>
+        <li><audio controls><source src="HimAndI.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio></li>
+    </ul>
+
+    <script>
+        // Confetti and sound effect implementation
+        document.addEventListener('DOMContentLoaded', (event) => {
+            // Add confetti
+            const confetti = document.createElement('canvas');
+            document.body.appendChild(confetti);
+            // Initialize confetti plugin here
+            // Add sound effects for buttons or events
+        });
+    </script>
 </body>
 </html>
